[package]
name = "engine_rules"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
engine = { path = "../engine" }
engine_data = { path = "../engine_data" }
glam = "0.29"
smallvec = "1.13"

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Mirror of `engine/theory-of-mind`: enables the belief-write cascade rules
# emitted into physics/*.rs and the Phase 5b decay block in step.rs.
theory-of-mind = ["engine/theory-of-mind"]
