[package]
name = "engine_rules"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
engine = { path = "../engine" }
engine_data = { path = "../engine_data" }
glam = "0.29"
smallvec = "1.13"
# DSL IR interpreter — optional; only pulled in under `interpreted-rules`.
dsl_ast = { path = "../dsl_ast", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Mirror of `engine/theory-of-mind`: enables the belief-write cascade rules
# emitted into physics/*.rs and the Phase 5b decay block in step.rs.
theory-of-mind = ["engine/theory-of-mind"]
# Route dispatch through the DSL IR interpreter. Must mirror engine's feature.
interpreted-rules = ["dep:dsl_ast", "engine/interpreted-rules"]
