[package]
name = "mass_battle_100v100_runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Per-fixture runtime crate for `assets/sim/mass_battle_100v100.sim`.
# Sixth REAL gameplay-shaped fixture: SCALE-UP for pair-field scoring
# (200 agents, 4 verbs, agent_cap × agent_cap mask grid). Mirrors
# duel_1v1_runtime's shape verbatim — build.rs lowers the .sim
# through the DSL compiler into OUT_DIR/generated.rs; src/lib.rs
# owns the GPU context, per-buffer storage, kernel cache, and
# per-tick dispatch chain.

[dependencies]
engine = { path = "../engine" }
wgpu = "=26.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
dsl_compiler = { path = "../dsl_compiler" }

[build-dependencies]
dsl_ast = { path = "../dsl_ast" }
dsl_compiler = { path = "../dsl_compiler" }
